<resources>
    <string name="app_name">MyJobs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_lead">LeadActivity</string>
    <string name="title_activity_fabu_job_details">FabuJobDetailsActivity</string>
    <string name="title_activity_dingwei">DingweiActivity</string>
    <string name="title_activity_update_information">UpdateInformationActivity</string>

    <string name="title_activity_shan">兼职吧!</string>

    <!-- fragment_fabu_layout -->
    <string name="fragment_fabu_title">选择发布类型</string>
    <string name="fragment_fabu_title_text">我的发布</string>
    <string name="title_activity_fabu_details">FabuDetailsActivity</string>

    <string name="fragment_fabu_job_title">详细</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="user_jianjie">简介</string>
    <string name="user_renzheng">认证</string>
    <string name="job_history">兼职历史</string>
    <string name="job_font_go">></string>
    <string name="back"><b><i></i></b></string>
    <string name="job_qiuzhi_zhaopin">求职/招聘</string>
    <string name="job_friends">我的积分</string>
    <string name="job_xinyong">兼职收入</string>
    <string name="job_yijian">意见反馈</string>
    <string name="job_about">关于我们</string>
    <string name="loginout">退出登录</string>
    <string name="login">请登录</string>
    <string name="login_app_name">兼职吧!</string>
    <string name="login_regist_name">注册兼职吧账号</string>
    <string name="all_class_font">所有分类</string>
    <string name="title_activity_all_class">AllClassActivity</string>
    <string name="title_activity_setings_user">SetingsUserActivity</string>
    <string name="title_activity_company_prove">CompanyProve</string>
    <string name="text_job_type">【类型：】</string>
    <string name="text_job_jobs">服务员</string>
    <string name="text_job_require">要求地址：</string>
    <string name="text_job_district">兰山区内</string>
    <string name="text_job_compensation">薪资：</string>
    <string name="text_job_money">3000/月</string>
    <string name="title_activity_tiaokuan">TiaokuanActivity</string>
    <string name="title_activity_citys">CitysActivity</string>
    <string name="locating">定位中</string>
    <string name="search">搜索</string>
    <string name="notfound">抱歉，未找到！</string>
    <string name="key_word">请输入关键字</string>
    <string name="locatez_as">定位为</string>
    <string name="switch_ornot">，是否切换？</string>
    <string name="city_show_text_hot">热门城市</string>
    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="third_title_close">关闭</string>
    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>
    <string name="xml_loading_01">加载中</string>

    <string name="cancel">取消</string>
    <string name="quit_dialog_cancel">取 消</string>
    <string name="assistant_upload_dialog_title">提示</string>
    <string name="title_activity_jifen">JifenActivity</string>
    <string name="title_activity_message">MessageActivity</string>


</resources>
