<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.job.activity.JobIncomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:background="#FFF"
        android:layout_marginBottom="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_job_type"
            android:textSize="12sp"
            android:textColor="@color/public_font_color"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_job_jobs"
            android:textSize="12sp"
            android:textColor="@color/public_font_color"
            android:id="@+id/text_jobincome_type"
            android:layout_above="@+id/textView4"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_job_require"
            android:textSize="12sp"
            android:textColor="@color/public_font_color"
            android:id="@+id/textView4"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_job_district"
            android:textSize="12sp"
            android:textColor="@color/public_font_color"
            android:id="@+id/text_jobincome_district"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/public_font_color"
            android:id="@+id/textView2"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@+id/textView3"
            android:layout_alignBottom="@+id/text_jobincome_district"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_alignTop="@+id/text_jobincome_type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_job_compensation"
            android:textSize="12sp"
            android:textColor="@color/public_font_color"
            android:id="@+id/textView3"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/text_jobincome_money"
            android:layout_toStartOf="@+id/text_jobincome_money" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_job_money"
            android:textSize="12sp"
            android:textColor="@color/public_font_color"
            android:id="@+id/text_jobincome_money"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</RelativeLayout>
