<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.job.activity.LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:gravity="center"
        android:background="#FFF"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_job_type"
                    android:textSize="12sp"
                    android:textColor="@color/public_font_color"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_job_jobs"
                    android:textSize="12sp"
                    android:textColor="@color/public_font_color"
                    android:id="@+id/text_jobincome_type" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_job_require"
                    android:textSize="12sp"
                    android:textColor="@color/public_font_color"
                    android:id="@+id/textView4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_job_district"
                    android:textSize="12sp"
                    android:textColor="@color/public_font_color"
                    android:id="@+id/text_jobincome_district"
                    android:layout_alignBaseline="@+id/textView4"
                    android:layout_alignBottom="@+id/textView4"
                    android:layout_toRightOf="@+id/textView4"
                    android:layout_toEndOf="@+id/textView4" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:background="@color/public_font_color"
            android:id="@+id/textView2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_job_compensation"
                android:textSize="12sp"
                android:textColor="@color/public_font_color"
                android:id="@+id/textView3"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/text_jobincome_money"
                android:layout_toStartOf="@+id/text_jobincome_money" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_job_money"
                android:textSize="12sp"
                android:textColor="@color/public_font_color"
                android:id="@+id/text_jobincome_money"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
